[add] initialize components

--- a/src/app/containers/search-page/search-page.component.html
+++ b/src/app/containers/search-page/search-page.component.html
@@ -1,1 +1,4 @@
-
+<app-search>{{query$|async}}</app-search>
+<div *ngFor="let book of (books$ | async)">
+  <app-book-list-element>{{book}}</app-book-list-element>
+</div>
