[add] book-list component

--- a/src/app/containers/search-page/search-page.component.html
+++ b/src/app/containers/search-page/search-page.component.html
@@ -1,4 +1,2 @@
-<app-search>{{query$|async}}</app-search>
-<div *ngFor="let book of (books$ | async)">
-  <app-book-list-element>{{book}}</app-book-list-element>
-</div>
+<app-search [query]="query$ | async" (onSearch)="search($event)"></app-search>
+<app-book-list [books]="books$ | async" (onAdd)="handleAdd($event)"></app-book-list>
