--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,1 @@
-<p>
-  search works!
-</p>
+<input [value]="query" (keyup)="onSearch.emit(search.value)" #search pInputText placeholder="Type for search">
