--- a/src/app/containers/cart-page/cart-page.component.html
+++ b/src/app/containers/cart-page/cart-page.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let book of (books$ | async)">
-  <app-book-list-element>{{book|json}}</app-book-list-element>
+  <app-book-list>{{book|json}}</app-book-list>
 </div>
