--- a/src/app/containers/search-page/search-page.component.html
+++ b/src/app/containers/search-page/search-page.component.html
@@ -1,2 +1,2 @@
 <app-search [query]="query$ | async" (onSearch)="search($event)"></app-search>
-<app-book-list [books]="books$ | async" (onAdd)="handleAdd($event)"></app-book-list>
+<app-book-list [books]="books$ | async" [inCartIds]="inCartIds$ | async " (onAdd)="handleAdd($event)" title="Search Result"></app-book-list>
