--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,21 +1,21 @@
 <p-dataList [value]="books">
   <p-header>
-    Search Result
+    {{title}}
   </p-header>
   <ng-template let-book pTemplate="item">
     <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px;border-bottom:1px solid #D5D5D5;">
       <div class="ui-grid-row">
-        <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-shopping-cart" *ngIf="!isInCart" (click)="onAdd.emit(book)" style="cursor:pointer;float:left;margin-top:40px"></i>
+        <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-shopping-cart" *ngIf="!inCartIds.includes(book.id)" (click)="onAdd.emit(book)" style="cursor:pointer;float:left;margin-top:40px"></i>
           <img src="{{book.volumeInfo.imageLinks?.smallThumbnail}}"></div>
         <div class="ui-grid-col-9">
           <div class="ui-grid ui-grid-responsive ui-fluid">
             <div class="ui-grid-row">
               <div class="ui-grid-col-2">Title: </div>
-              <div class="ui-grid-col-10">{{book.volumeInfo.title}}</div>
+              <div class="ui-grid-col-10"><a [routerLink]="['../', book.id]">{{book.volumeInfo.title}}</a></div>
             </div>
             <div class="ui-grid-row">
               <div class="ui-grid-col-2">Author(s): </div>
-              <div class="ui-grid-col-10"><a [routerLink]="['../', book.id]">{{book.volumeInfo.authors}}</a></div>
+              <div class="ui-grid-col-10">{{book.volumeInfo.authors}}</div>
             </div>
           </div>
         </div>
