--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,25 +1,14 @@
-<p-dataList [value]="books">
-  <p-header>
-    {{title}}
-  </p-header>
-  <ng-template let-book pTemplate="item">
-    <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px;border-bottom:1px solid #D5D5D5;">
-      <div class="ui-grid-row">
-        <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-shopping-cart" *ngIf="!inCartIds.includes(book.id)" (click)="onAdd.emit(book)" style="cursor:pointer;float:left;margin-top:40px"></i>
-          <img src="{{book.volumeInfo.imageLinks?.smallThumbnail}}"></div>
-        <div class="ui-grid-col-9">
-          <div class="ui-grid ui-grid-responsive ui-fluid">
-            <div class="ui-grid-row">
-              <div class="ui-grid-col-2">Title: </div>
-              <div class="ui-grid-col-10"><a [routerLink]="['../', book.id]">{{book.volumeInfo.title}}</a></div>
-            </div>
-            <div class="ui-grid-row">
-              <div class="ui-grid-col-2">Author(s): </div>
-              <div class="ui-grid-col-10">{{book.volumeInfo.authors}}</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ng-template>
-</p-dataList>
+<md-card>
+  <md-card-title>{{title}}</md-card-title>
+  <md-card-content>
+    <md-list>
+      <md-list-item *ngFor="let book of books">
+        <app-add-to-cart [isInCart]="inCartIds.includes(book.id)" (click)="onAdd.emit(book)"></app-add-to-cart>
+        <h4 md-line [routerLink]="['/books/', book.id]" class="link">{{book.volumeInfo.title}}</h4>
+        <p md-line> {{book.volumeInfo.authors}} </p>
+      </md-list-item>
+    </md-list>
+    <app-spinner *ngIf="isLoading">
+    </app-spinner>
+  </md-card-content>
+</md-card>
