[add] material based search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<md-sidenav-container fullscreen>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</md-sidenav-container>
