--- a/src/app/containers/cart-page/cart-page.component.html
+++ b/src/app/containers/cart-page/cart-page.component.html
@@ -1,1 +1,1 @@
-<app-book-list [books]="books$ | async" [inCartIds]="inCartIds$ | async" title="Books in cart"></app-book-list>
+<app-book-list [books]="books$ | async" [isLoading]="isLoading$ | async" [inCartIds]="inCartIds$ | async" title="Books in cart"></app-book-list>
